# kraken

./: .travis.yml
kraken/: kraken.cabal
kraken-web/: default.nix  kraken-web.cabal  kraken-web.conf.example
kraken-web/driver/: Main.hs
kraken-web/src/Kraken/: Web.hs
kraken-web/src/Kraken/Web/: Client.hs  Config.hs
kraken-web/static/: index.html
kraken-web/static/css/: style.css
kraken-web/static/js/: kraken-web-client.js
kraken-web/test/Kraken/: WebSpec.hs
kraken/driver/: Main.hs
kraken/examples/: Main.hs
kraken/src/Kraken/: ActionM.hs  Daemon.hs  Dot.hs  Run.hs  TargetGraph.hs
kraken/src/Kraken/Daemon/: Internal.hs
kraken/test/: KrakenSpec.hs
kraken/test/Kraken/: DaemonSpec.hs
