name:             kraken-web
version:          0.2.0.0
author:           Sönke Hahn
maintainer:       soenke.hahn@zalora.com
copyright:        Zalora South East Asia Pte Ltd
license:          BSD3
license-file:     LICENSE
category:         Database
build-type:       Simple
cabal-version:    >= 1.10

extra-source-files:
  default.nix

data-files:
  static/*.html

flag network-uri
   description: Get Network.URI from the network-uri package
   default: True

library
  hs-source-dirs:
      src
  build-depends:
      base == 4.*
    , aeson
    , bytestring
    , configurator
    , containers
    , directory
    , either == 4.3.*
    , enclosed-exceptions
    , filepath
    , graph-wrapper
    , http-client
    , http-types
    , interpolate
    , kraken
    , mtl
    , optparse-applicative >= 0.11
    , process
    , safe
    , servant
    , servant-client
    , servant-docs
    , servant-server
    , string-conversions
    , system-filepath
    , text
    , transformers
    , wai
    , wai-app-static
    , warp
    , yaml
  if flag(network-uri)
    build-depends: network-uri >= 2.6, network >= 2.6
  else
    build-depends: network-uri < 2.6, network < 2.6
  exposed-modules:
      Kraken.Web
      Kraken.Web.Config
      Kraken.Web.Utils
      Paths_kraken_web
  default-language:
      Haskell2010
  ghc-options:
      -Wall -fno-warn-name-shadowing
      -threaded

--executable kraken-web
  --main-is: Kraken/Web/Main.hs
  --hs-source-dirs:
    --src
  --build-depends:
      --base
    --, aeson
    --, bytestring
    --, containers
    --, directory
    --, either
    --, enclosed-exceptions
    --, filepath
    --, graph-wrapper
    --, http-client
    --, http-types
    --, interpolate
    --, mtl
    --, optparse-applicative >= 0.11
    --, process
    --, safe
    --, servant
    --, servant-server
    --, servant-docs
    --, servant-client
    --, string-conversions
    --, system-filepath
    --, transformers
    --, wai
    --, wai-app-static
    --, warp
    --, yaml
  --if flag(network-uri)
    --build-depends: network-uri >= 2.6, network >= 2.6
  --else
    --build-depends: network-uri < 2.6, network < 2.6
  --default-language:
      --Haskell2010
  --ghc-options:
      ---Wall -fno-warn-name-shadowing
      ---threaded

test-suite krakenwebspec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -fno-warn-name-shadowing
      -threaded
      -O0
  default-language:
      Haskell2010
  hs-source-dirs:
      test
  main-is:
      Spec.hs
  other-modules:
      Kraken.WebSpec
      Kraken.Web.ConfigSpec
  build-depends:
      base == 4.*
    , aeson
    , deepseq
    , directory
    , hspec
    , hspec-wai
    , kraken
    , kraken-web
    , network
    , process
    , string-conversions
    , servant-client
    , temporary
    , wai-extra
    , warp
